finished parallax scrolling

--- a/app/includes/elements.jade
+++ b/app/includes/elements.jade
@@ -1,13 +1,21 @@
 .elements
   .clouds
     .clouds-content
-      img.cloud-1(src='images/elements/cloud_01.png', data-anchor-target=".clouds-content", data-top-top="top: 400px")
-      img.cloud-2(src='images/elements/cloud_02.png')
-      img.cloud-3(src='images/elements/cloud_03.png')
-      img.cloud-4(src='images/elements/cloud_04.png')
-      img.cloud-5(src='images/elements/cloud_05.png')
-      img.cloud-6(src='images/elements/cloud_06.png')
-      img.cloud-7(src='images/elements/cloud_07.png')
-      img.cloud-8(src='images/elements/cloud_08.png')
-      img.cloud-9(src='images/elements/cloud_09.png')
-      img.sun-1(src='images/elements/sun_01.png')
+      img.cloud-1(src='images/elements/cloud_01.png', data-stellar-ratio="0.7")
+      img.cloud-2(src='images/elements/cloud_02.png', data-stellar-ratio="0.71")
+      img.cloud-3(src='images/elements/cloud_03.png', data-stellar-ratio="0.73")
+      img.cloud-4(src='images/elements/cloud_04.png', data-stellar-ratio="0.78")
+      img.cloud-5(src='images/elements/cloud_05.png', data-stellar-ratio="0.75")
+      img.cloud-6(src='images/elements/cloud_06.png', data-stellar-ratio="0.74")
+      img.cloud-7(src='images/elements/cloud_07.png', data-stellar-ratio="0.7")
+      img.cloud-8(src='images/elements/cloud_08.png', data-stellar-ratio="0.79")
+      img.cloud-9(src='images/elements/cloud_09.png', data-stellar-ratio="0.73")
+      img.sun-1(src='images/elements/sun_01.png', data-stellar-ratio="1.1")
+  .bubbles
+    .bubbles-content
+      img.bubble-1(src='images/elements/bubbles_01.png', data-stellar-ratio="1.1")
+      img.bubble-2(src='images/elements/bubbles_02.png', data-stellar-ratio="1.2")
+      img.bubble-3(src='images/elements/bubbles_03.png', data-stellar-ratio="1.1")
+  .space
+    .space-content
+      img.space-1(src='images/elements/space_01.png', data-stellar-ratio="0.90")
