--- a/app/includes/menu.jade
+++ b/app/includes/menu.jade
@@ -9,7 +9,7 @@
     li.contact-link
       a(href='#Contact') Contact
     li
-      a.longer(href='#') Order Online
+      a.longer(href='') Order Online
 
   a.menu-drylock-logo(href='http://www.drylock.eu/')
     img(src='images/Menu-Drylock-Logo.png')
