--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -11,8 +11,10 @@ body
   background-repeat no-repeat
   height 100%
   background-attachment: scroll;
-  // overflow hidden // For loading purpose
+  overflow hidden // For loading purpose
 
+.hide-during-load
+  opacity 0
 
 @import 'elements'
 
