--- a/app/views/styles/elements.styl
+++ b/app/views/styles/elements.styl
@@ -25,7 +25,7 @@
       .cloud-3
         left 349px
         top 555px
-        z-index 20
+        z-index 0
 
       .cloud-4
         left 523px
@@ -56,4 +56,52 @@
 
       .sun-1
         left 1080.5px
-        top 592px
+        top 650px
+        z-index 50
+
+  .bubbles
+    top 1900px
+    width 100%
+    position absolute
+    height 1px
+    z-index 0
+
+    .bubbles-content
+      width 1px
+      margin 0 auto
+
+      img
+        margin 0 auto
+        position absolute
+
+      .bubble-1
+        left 591.5px
+        top 759px
+
+      .bubble-2
+        left 332px
+        top 569px
+
+      .bubble-3
+        left 1294px
+        top 435px
+        z-index 20
+
+  .space
+    top 2500px
+    width 100%
+    position absolute
+    height 1px
+    z-index 0
+
+    .space-content
+      width 1px
+      margin 0 auto
+
+      img
+        margin 0 auto
+        position absolute
+
+      .space-1
+        top 200px
+        left 200px
