--- a/public/css/app.css
+++ b/public/css/app.css
@@ -557,6 +557,7 @@ input {
   float: left;
   margin-left: 25px;
   margin-top: 30px;
+  z-index: 999;
 }
 .nav>li>a:hover,
 .nav>li>a:focus {
@@ -585,6 +586,12 @@ body {
   background-repeat: no-repeat;
   height: 100%;
   background-attachment: scroll;
+  overflow: hidden;
+}
+.hide-during-load {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
 }
 .elements {
   position: relative;
@@ -613,7 +620,7 @@ body {
 .elements .clouds .clouds-content .cloud-3 {
   left: 349px;
   top: 555px;
-  z-index: 20;
+  z-index: 0;
 }
 .elements .clouds .clouds-content .cloud-4 {
   left: 523px;
@@ -644,7 +651,55 @@ body {
 }
 .elements .clouds .clouds-content .sun-1 {
   left: 1080.5px;
-  top: 592px;
+  top: 650px;
+  z-index: 50;
+}
+.elements .bubbles {
+  top: 1900px;
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  z-index: 0;
+}
+.elements .bubbles .bubbles-content {
+  width: 1px;
+  margin: 0 auto;
+}
+.elements .bubbles .bubbles-content img {
+  margin: 0 auto;
+  position: absolute;
+}
+.elements .bubbles .bubbles-content .bubble-1 {
+  left: 591.5px;
+  top: 759px;
+}
+.elements .bubbles .bubbles-content .bubble-2 {
+  left: 332px;
+  top: 569px;
+}
+.elements .bubbles .bubbles-content .bubble-3 {
+  left: 1294px;
+  top: 435px;
+  z-index: 20;
+}
+.elements .space {
+  top: 2500px;
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  z-index: 0;
+}
+.elements .space .space-content {
+  width: 1px;
+  margin: 0 auto;
+}
+.elements .space .space-content img {
+  margin: 0 auto;
+  position: absolute;
+}
+.elements .space .space-content .space-1 {
+  top: 200px;
+  left: 200px;
 }
 .loading .logo {
   text-align: center;
@@ -1111,7 +1166,7 @@ body {
 .elements .clouds .clouds-content .cloud-3 {
   left: 349px;
   top: 555px;
-  z-index: 20;
+  z-index: 0;
 }
 .elements .clouds .clouds-content .cloud-4 {
   left: 523px;
@@ -1142,7 +1197,55 @@ body {
 }
 .elements .clouds .clouds-content .sun-1 {
   left: 1080.5px;
-  top: 592px;
+  top: 650px;
+  z-index: 50;
+}
+.elements .bubbles {
+  top: 1900px;
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  z-index: 0;
+}
+.elements .bubbles .bubbles-content {
+  width: 1px;
+  margin: 0 auto;
+}
+.elements .bubbles .bubbles-content img {
+  margin: 0 auto;
+  position: absolute;
+}
+.elements .bubbles .bubbles-content .bubble-1 {
+  left: 591.5px;
+  top: 759px;
+}
+.elements .bubbles .bubbles-content .bubble-2 {
+  left: 332px;
+  top: 569px;
+}
+.elements .bubbles .bubbles-content .bubble-3 {
+  left: 1294px;
+  top: 435px;
+  z-index: 20;
+}
+.elements .space {
+  top: 2500px;
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  z-index: 0;
+}
+.elements .space .space-content {
+  width: 1px;
+  margin: 0 auto;
+}
+.elements .space .space-content img {
+  margin: 0 auto;
+  position: absolute;
+}
+.elements .space .space-content .space-1 {
+  top: 200px;
+  left: 200px;
 }
 
 .loading .logo {
