Remove top sun to avoid collision with dry lock logo + add footer

--- a/app/index.jade
+++ b/app/index.jade
@@ -46,8 +46,8 @@ html(class="no-js", lang="en")
         include includes/contact
 
       // Footer
-      .footer.cf.hide-during-load
-        //- p All Rights Reserved Drylock Technologies | 2013 -2014 Created by Wercajk
+      .footer.hide-during-load
+        include includes/footer
 
     script(src='js/app.js', onload='require(\'initialize\');')
     script.
