--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -27,11 +27,6 @@ body
 
 @import 'contact'
 
+@import 'footer'
 
-// Footer
-.footer
-  width 100%
-  top 300px
-  position absolute
-  overflow hidden
-  top 4680px
+
