Fixed all products positions

--- a/app/includes/elements.jade
+++ b/app/includes/elements.jade
@@ -1,6 +1,6 @@
 .elements
   .clouds
-    .clouds-content
+    .clouds-content X
       img.cloud-1(src='images/elements/cloud_01.png', data-stellar-ratio="0.7")
       img.cloud-2(src='images/elements/cloud_02.png', data-stellar-ratio="0.71")
       img.cloud-3(src='images/elements/cloud_03.png', data-stellar-ratio="0.73")
@@ -10,7 +10,7 @@
       img.cloud-7(src='images/elements/cloud_07.png', data-stellar-ratio="0.7")
       img.cloud-8(src='images/elements/cloud_08.png', data-stellar-ratio="0.79")
       img.cloud-9(src='images/elements/cloud_09.png', data-stellar-ratio="0.73")
-      //- img.sun-1(src='images/elements/sun_01.png', data-stellar-ratio="1.1")
+      img.sun-1(src='images/elements/sun_01.png', data-stellar-ratio="1.1")
   .bubbles
     .bubbles-content
       img.bubble-1(src='images/elements/bubbles_01.png', data-stellar-ratio="1.1")
