--- a/app/includes/products.jade
+++ b/app/includes/products.jade
@@ -82,6 +82,17 @@
             .title BABY WIPES
             .description 64 ultra soft sheets
           img(src='images/packshots/Magics_wipes.png')
+
+    .col-xs-6.col-xs-push-1.mats
+      .row.diapers-detail
+        .col-xs-9.text-right
+          .diapers-info.text-right
+            .title CHANGE MATS
+            .weight 60 x 60 cm
+            .description 10 baby change mats
+        .col-xs-3
+          img(src='images/packshots/Magics_mats.png')
+  .row
     .col-xs-4.col-xs-push-2.text-center.videos
       .videos-detail.text-center
         a(href='http://www.youtube.com/watch?v=-HDieM32pts')
