--- a/app/views/styles/about.styl
+++ b/app/views/styles/about.styl
@@ -1,10 +1,9 @@
 // About
 .about
   width 100%
-  top 300px
   position absolute
   overflow hidden
-  top 2345px
+  top 2414px
   color #fff
 
   .about-content
@@ -20,12 +19,19 @@
         color #fff
 
         p
-          padding-bottom 13px
+          padding-bottom 16px
           font-size: 16px;
 
+        h4
+          margin-top 43px
+
     .ecology-description
-      margin-top: 117px;
+      margin-top: 106px;
       margin-left: -5px;
+
+      h5
+        margin-top 2px
+        margin-bottom 5px
 
       p
         color #fff
@@ -33,7 +39,7 @@
         font-size: 16px;
 
     .product-reviews
-      margin-top 78px
+      margin-top 79px
       margin-left 193px
 
       .product-reviews-content > .row
