--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -6,7 +6,7 @@
 body
   background url(/images/background.jpg)
   background-color #3f7cd5
-  // background url(/images/background-positioning.jpg)
+  background url(/images/background-positioning.jpg)
   background-position 50% 0
   background-repeat no-repeat
   height 100%
