--- a/app/views/styles/elements.styl
+++ b/app/views/styles/elements.styl
@@ -7,51 +7,57 @@
     height 1px
 
     .clouds-content
+      position relative
+      left -435px
+      top 100px
       width 1px
       margin 0 auto
+      font-size 0
 
       img
         margin 0 auto
         position absolute
 
       .cloud-1
-        left 83.5px
-        top 564px
+        left -298px
+        top 484px
 
       .cloud-2
-        left 251px
-        top 479px
+        left -130px
+        top 399px
 
       .cloud-3
-        left 349px
-        top 555px
+        left -32px
+        top 475px
         z-index 0
 
       .cloud-4
-        left 523px
-        top 518px
+        // left 523px 381
+        // top 518px 80
+        left 142px
+        top 438px
         z-index 0
 
       .cloud-5
-        left 690px
-        top 630px
+        left 309px
+        top 550px
 
       .cloud-6
-        left 852px
-        top 566px
+        left 471px
+        top 486px
 
       .cloud-7
-        left 988px
-        top 527px
+        left 607px
+        top 447px
 
       .cloud-8
-        left 1382px
-        top 519px
+        left 1001px
+        top 439px
         z-index 10
 
       .cloud-9
-        left 1601px
-        top 540px
+        left 1220px
+        top 460px
         z-index 0
 
       .sun-1
