--- a/app/views/styles/products.styl
+++ b/app/views/styles/products.styl
@@ -56,63 +56,71 @@
 
     img
       position relative
-      top -28px
+      top -12px
       left -6px
 
-.diapers-2
-  padding-top 115px
-  padding-left 35px
+    .col-xs-6
+      padding-left 0
 
+.diapers-2
+  .diapers-detail
+    position relative
+    top 126px
+    left 31px
+
+    img
+      position relative
+      top -17px
 
 .diapers-3
   .diapers-detail
     position relative
-    top -130px
+    top -27px
     left -70px
 
     img
       position relative
-      top -28px
+      top -10px
       left -70px
 
 .diapers-4
   .diapers-detail
     position relative
-    top -27px
-    left 72px
+    top 86px
+    left 62px
 
     img
       position relative
-      top -28px
-      left -6px
+      top -5px
+      left 3px
 
 .diapers-5
   .diapers-detail
     position relative
-    top -171px
-    left -50px
+    top -56px
+    left -49px
 
     img
       position relative
-      top -28px
+      top -15px
       left 7px
 
 .diapers-6
   .diapers-detail
     position relative
-    top 20px
-    left 31px
+    top 95px
+    left 103px
 
     img
       position relative
-      top -15px
+      top -10px
       left -70px
 
 .wipes
   .diapers-detail
     position relative
-    top -147px
-    left -29px
+    top -100px
+    left -103px
 
     .diapers-info
       .description
@@ -123,21 +131,34 @@
       top 10px
       left 5px
 
+
+
+.mats
+  .diapers-detail
+    position relative
+    top 72px
+    left -120px
+
+    img
+      position relative
+      top -15px
+      left 5px
+
 .videos
   .videos-detail
     position relative
-    top -36px
-    left -15px
+    top -118px
+    left -22px
   .button
     font-size 23px
     color #fff
     fontoon()
     background #D91369
-    border-radius 7px
+    border-radius 13px
     behavior url(PIE.htc)
-    width 240px
-    margin: 0 auto
-    padding 2px 3px
+    width 255px
+    margin: 2px auto
+    padding 4px 3px
   .button:hover
     text-decoration none
 
