Added sound button and make loading disappear much smoother

--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -6,7 +6,7 @@
 body
   background url(/images/background.jpg)
   background-color #3f7cd5
-  background url(/images/background-positioning.jpg)
+  // background url(/images/background-positioning.jpg)
   background-position 50% 0
   background-repeat no-repeat
   height 100%
@@ -20,6 +20,12 @@ a
   color #151C64
 a:hover
   color #151C64
+
+.sound-button
+  position fixed
+  top 17px
+  right 17px
+  cursor pointer
 
 @import 'elements'
 
