--- a/app/index.jade
+++ b/app/index.jade
@@ -14,6 +14,9 @@ html(lang="en")
     //- Load background image upfront
     img(src='images/background.jpg', style='display: none')
 
+    //- Sound button
+    img.sound-button(src='images/Sound-On.png')
+
     .content
 
       include includes/elements
