--- a/app/views/styles/_fonts.styl
+++ b/app/views/styles/_fonts.styl
@@ -1,7 +1,7 @@
 @font-face
   font-family: 'FontoonCom';
   src: url('/webfonts/298D4A_0_0.eot');
-  src: url('/webfonts/298D4A_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/298D4A_0_0.woff') format('woff'),url('webfonts/298D4A_0_0.ttf') format('truetype');
+  src: url('/webfonts/298D4A_0_0.eot?#iefix') format('embedded-opentype'),url('/webfonts/298D4A_0_0.woff') format('woff'),url('/webfonts/298D4A_0_0.ttf') format('truetype');
 
 fontoon()
   font-family FontoonCom
