Adding back charset meta

--- a/app/index.jade
+++ b/app/index.jade
@@ -2,6 +2,7 @@ doctype
 html(lang="en")
 
   head
+    meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     title Magics - THE REVOLUTIONARY THIN DIAPER
     meta(name='description', content='')
