Fixing dash in product page

--- a/app/includes/products.jade
+++ b/app/includes/products.jade
@@ -5,7 +5,7 @@
         .col-xs-6
           .diapers-info.text-right
             .title NEW BORN
-            .weight 2–5 kg
+            .weight 2-5 kg
             .description 36 ultra thin diapers
         .col-xs-1
           .number-circle.number-orange 1
@@ -21,7 +21,7 @@
         .col-xs-5.text-left
           .diapers-info.text-left
             .title MINI
-            .weight 3–6 kg
+            .weight 3-6 kg
             .description 34 ultra thin diapers
 
   .row
@@ -34,7 +34,7 @@
         .col-xs-6.text-left
           .diapers-info.text-left
             .title MIDI
-            .weight 4–9 kg
+            .weight 4-9 kg
             .description 31 ultra thin diapers
 
     .col-xs-5.col-xs-push-1.diapers-4
@@ -42,7 +42,7 @@
         .col-xs-6.text-right
           .diapers-info.text-right
             .title MAXI
-            .weight 7–18 kg
+            .weight 7-18 kg
             .description 29 ultra thin diapers
         .col-xs-1
           .number-circle.number-pink 4
@@ -55,7 +55,7 @@
         .col-xs-6.text-right
           .diapers-info.text-right
             .title JUNIOR
-            .weight 11–25 kg
+            .weight 11-25 kg
             .description 27 ultra thin diapers
         .col-xs-1
           .number-circle.number-blue 5
@@ -71,7 +71,7 @@
         .col-xs-6.text-left
           .diapers-info.text-left
             .title XL
-            .weight 16–30kg
+            .weight 16-30kg
             .description 25 ultra thin diapers
 
   .row
