Fix czech contact diacritic

--- a/app/includes/contact.jade
+++ b/app/includes/contact.jade
@@ -23,8 +23,8 @@
         img.envelope(src="/images/Contact-Envelope.png")
         img.arroba(src="/images/Contact-Arroba.png")
         h3 Drylock Technologies, s.r.o.
-        div Vlámská 801
-        div Hrádek nad Nisou
+        div Vlámská 801
+        div Hrádek nad Nisou
         div 463 34
         strong Czech Republic
         br
