Set proper viewport size for mobile devices

--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -12,6 +12,7 @@ body
   height 100%
   background-attachment scroll
   overflow hidden // For loading purpose
+  background-size: cover !important;
 
 .hide-during-load
   opacity 0
