--- a/app/index.jade
+++ b/app/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     title Magics - THE REVOLUTIONARY THIN DIAPER
     meta(name='description', content='')
-    meta(name='viewport', content='width=device-width')
+    meta(name='viewport', content='width=990')
     script window.brunch = window.brunch || {};
     link(rel='stylesheet', href='css/app.css')
 
