Fix at sign and remove link from order online

--- a/app/includes/contact.jade
+++ b/app/includes/contact.jade
@@ -11,17 +11,17 @@
     .col-xs-5
       .contact-address-belgium
         img.envelope(src="/images/Contact-Envelope.png")
-        img.arroba(src="/images/Contact-Arroba.png")
         h3 Drylock Technologies NV
         div Spinnerijstraat 14
         div 9240 Zele
         strong Belgium
         br
         br
-        a(href="mailto:info@drylock.eu") info@drylock.eu
+        a(href="mailto:info@drylock.eu")
+          img.arroba(src="/images/Contact-Arroba.png")
+          span info@drylock.eu
       .contact-address-czech
         img.envelope(src="/images/Contact-Envelope.png")
-        img.arroba(src="/images/Contact-Arroba.png")
         h3 Drylock Technologies, s.r.o.
         div Vlámská 801
         div Hrádek nad Nisou
@@ -29,19 +29,7 @@
         strong Czech Republic
         br
         br
-        a(href="mailto:info.cz@drylock.eu") info.cz@drylock.eu
+        a(href="mailto:info.cz@drylock.eu")
+          img.arroba(src="/images/Contact-Arroba.png")
+          span info.cz@drylock.eu
 
-
-
-//- div.
-//-   Drylock Technologies NV
-//-   Spinnerijstraat 14 9240 Zele Belgium
-//-   info@drylock.eu
-//-   Drylock Technologies, s.r.o.
-//-   Vlámská 801 Hrádek nad Nisou 463 34
-//-   Czech Republic
-//-   info.cz@drylock.eu
-//-   ￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼
-//-   My name:
-//-   My address:
-//-   Message:
