add more bubbles and generated production version

--- a/app/views/styles/elements.styl
+++ b/app/views/styles/elements.styl
@@ -73,8 +73,12 @@
     z-index 0
 
     .bubbles-content
+      position relative
+      left -635px
+      top 0px
       width 1px
       margin 0 auto
+      font-size 0
 
       img
         margin 0 auto
@@ -89,9 +93,12 @@
         top 569px
 
       .bubble-3
-        left 820px
-        top 570px
-        z-index 20
+        left 936px
+        top 780px
+
+      .bubble-4
+        left 750px
+        top 569px
 
   .space
     top 2500px
