Add obsolete browser redirection and Rebuild last production env

--- a/app/index.jade
+++ b/app/index.jade
@@ -8,6 +8,10 @@ html(lang="en")
     meta(name='description', content='')
     meta(name='viewport', content='width=990')
     script window.brunch = window.brunch || {};
+    <!--[if lt IE 9]>
+    script.
+      window.location = "http://www.browser-update.org/update-browser.html"
+    <![endif]-->
     link(rel='stylesheet', href='css/app.css')
 
   body
