Changed redirect location to nicer place

--- a/app/index.jade
+++ b/app/index.jade
@@ -10,7 +10,7 @@ html(lang="en")
     script window.brunch = window.brunch || {};
     <!--[if lt IE 9]>
     script.
-      window.location = "http://www.browser-update.org/update-browser.html"
+      window.location = "http://browsehappy.com/?locale=en"
     <![endif]-->
     link(rel='stylesheet', href='css/app.css')
 
