Remove order online part of the menu

--- a/app/includes/menu.jade
+++ b/app/includes/menu.jade
@@ -8,8 +8,8 @@
       a(href='#About') About
     li.contact-link
       a(href='#Contact') Contact
-    li
-      a.longer Order Online
+    //- li
+    //-   a.longer Order Online
 
   a.menu-drylock-logo(href='http://www.drylock.eu/')
     img(src='images/Menu-Drylock-Logo.png')
