--- a/app/views/styles/_menu.styl
+++ b/app/views/styles/_menu.styl
@@ -13,14 +13,18 @@
     float left
     margin-top 20px
 
+.menu > ul > li:first-child
+  margin-left 55px
+
 .menu > ul > li
-  padding 11px 7px
+  padding 11px 17px
   margin-top 0px
 
 .menu > ul > li > a
   color #fff
   width 130px
   text-align center
+  padding 10px 10px
 
 .menu > ul > li > a.longer
   width 154px
@@ -28,7 +32,8 @@
   padding-right 0
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus
-  background: none
+  background none
+  font-weight bold
 
 .nav>li>a:hover, .nav>li>a:focus
   text-decoration none
@@ -37,7 +42,7 @@
 .menu-magics-logo
   float left
   margin-right 18px
-  margin-left: 6px;
+  margin-left 6px
 // position relative
 //   top -15px
 //   left 10px
