Small logo adjustments

--- a/app/views/styles/_menu.styl
+++ b/app/views/styles/_menu.styl
@@ -9,12 +9,9 @@
     border-radius 8px
     background url(/images/Menu-Background.png) no-repeat
     background-position 50% 50%
-    width 607px
+    width 497px
     float left
-    margin-top 20px
-
-.menu > ul > li:first-child
-  margin-left 55px
+    margin-top 35px
 
 .menu > ul > li
   padding 11px 17px
@@ -41,8 +38,8 @@
 
 .menu-magics-logo
   float left
-  margin-right 18px
-  margin-left 6px
+  margin-right 24px
+  // margin-left 6px
 // position relative
 //   top -15px
 //   left 10px
@@ -50,7 +47,7 @@
 .menu-drylock-logo
   float left
   margin-left 25px
-  margin-top 30px
+  margin-top 45px
   z-index 999
 //   float right
 // position relative
