Adding contact mail support

--- a/app/includes/about.jade
+++ b/app/includes/about.jade
@@ -11,7 +11,7 @@
               h5 original fluffless technology
           .row
             .col-xs-3
-              img(src='images/About-Diaper.png')
+              img(src='images/About-Diaper.png', alt='')
             .col-xs-9.description-text
               p Allows for thin, comfortable and highly absorbent products.
               p The thinnest and fastest performance diaper on the market. Products with integrated fluid management system. The product interacts with and responds to the liquid.
@@ -28,7 +28,7 @@
               h4 Ecological Benefits
           .row
             .col-xs-4
-              img(src='images/Product-Recycle.png')
+              img(src='images/Product-Recycle.png', alt='')
             .col-xs-8.description-text
               h5 Fluffless diaper:
               p eliminating cellulose saves millions of trees each year.
@@ -43,20 +43,20 @@
         .col-xs-8.col-xs-push-4.product-reviews-content
           .row
             .col-xs-1
-              img(src='images/Apostrophes.png')
+              img(src='images/Apostrophes.png', alt='')
             .col-xs-11
               em A perfect score. In terms of overall performance, Drylock is superior to all US made diapers.
               strong Carlos Richer
               p (2012 STUDY COMPARING DRYLOCK WITH ALL MAIN US BRANDS)
           .row
             .col-xs-1
-              img(src='images/Apostrophes.png')
+              img(src='images/Apostrophes.png', alt='')
             .col-xs-11
-              em Saugt mehr und schneller als herkömmliche Produkte.
+              em Saugt mehr und schneller als herkömmliche Produkte.
               strong Hy-TecHygiene Consulting
           .row
             .col-xs-1
-              img(src='images/Apostrophes.png')
+              img(src='images/Apostrophes.png', alt='')
             .col-xs-11
               em Very good in dryness and absorption.
               strong Courtray Consulting Labservice
