--- a/app/includes/menu.jade
+++ b/app/includes/menu.jade
@@ -1,5 +1,5 @@
 .menu.cf
-  img.menu-magics-logo(src='images/Menu-Magics-Logo.png')
+  img.menu-magics-logo(src='images/Menu-Magics-Logo.png', alt='')
 
   ul.nav.nav-pills
     li.products-link
@@ -12,4 +12,4 @@
     //-   a.longer Order Online
 
   a.menu-drylock-logo(href='http://www.drylock.eu/')
-    img(src='images/Menu-Drylock-Logo.png')
+    img(src='images/Menu-Drylock-Logo.png', alt='')
