--- a/app/includes/products.jade
+++ b/app/includes/products.jade
@@ -10,12 +10,12 @@
         .col-xs-1
           .number-circle.number-orange 1
         .col-xs-5
-          img(src='images/packshots/Magics_1.png')
+          img(src='images/packshots/Magics_1.png', alt='')
 
     .col-xs-6.diapers-2
       .row.diapers-detail
         .col-xs-6
-          img(src='images/packshots/Magics_2.png')
+          img(src='images/packshots/Magics_2.png', alt='')
         .col-xs-1
           .number-circle.number-yellow 2
         .col-xs-5.text-left
@@ -28,7 +28,7 @@
     .col-xs-5.col-xs-push-1.diapers-3
       .row.diapers-detail
         .col-xs-5
-          img(src='images/packshots/Magics_3.png')
+          img(src='images/packshots/Magics_3.png', alt='')
         .col-xs-1
           .number-circle.number-green 3
         .col-xs-6.text-left
@@ -47,7 +47,7 @@
         .col-xs-1
           .number-circle.number-pink 4
         .col-xs-5
-          img(src='images/packshots/Magics_4.png')
+          img(src='images/packshots/Magics_4.png', alt='')
 
   .row
     .col-xs-5.col-xs-push-1.diapers-5
@@ -60,12 +60,12 @@
         .col-xs-1
           .number-circle.number-blue 5
         .col-xs-5
-          img(src='images/packshots/Magics_5.png')
+          img(src='images/packshots/Magics_5.png', alt='')
 
     .col-xs-5.col-xs-push-1.diapers-6
       .row.diapers-detail
         .col-xs-5
-          img(src='images/packshots/Magics_6.png')
+          img(src='images/packshots/Magics_6.png', alt='')
         .col-xs-1
           .number-circle.number-violet 6
         .col-xs-6.text-left
@@ -81,7 +81,7 @@
           .diapers-info.text-center
             .title BABY WIPES
             .description 72 ultra soft sheets
-          img(src='images/packshots/Magics_wipes.png')
+          img(src='images/packshots/Magics_wipes.png', alt='')
 
     .col-xs-6.col-xs-push-1.mats
       .row.diapers-detail
@@ -91,10 +91,10 @@
             .weight 60 x 60 cm
             .description 10 baby change mats
         .col-xs-3
-          img(src='images/packshots/Magics_mats.png')
+          img(src='images/packshots/Magics_mats.png', alt='')
   .row
     .col-xs-4.col-xs-push-2.text-center.videos
       .videos-detail.text-center
         a(href='http://www.youtube.com/watch?v=-HDieM32pts')
-          img(src='images/Video.png')
+          img(src='images/Video.png', alt='')
           .button Watch our videos!
