--- a/app/index.jade
+++ b/app/index.jade
@@ -3,9 +3,11 @@ html(lang="en")
 
   head
     meta(charset='utf-8')
+    <!--[if IE]>
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    <![endif]-->
     title Magics - THE REVOLUTIONARY THIN DIAPER
-    meta(name='description', content='')
+    meta(name='description', content='THE REVOLUTIONARY THIN DIAPER')
     meta(name='viewport', content='width=990')
     script window.brunch = window.brunch || {};
     <!--[if lt IE 9]>
@@ -16,7 +18,7 @@ html(lang="en")
 
   body
     //- Load background image upfront
-    img(src='images/background.jpg', style='display: none')
+    img(src='images/background.jpg', style='display: none', alt='')
 
     .content
 
@@ -27,7 +29,6 @@ html(lang="en")
         include includes/loading
 
       // Products
-
       #Products.products.hide-during-load
         include includes/menu
         include includes/products
@@ -49,7 +50,7 @@ html(lang="en")
 
     script(src='js/app.js', onload='require(\'initialize\');')
     script.
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+      var _gaq=[['_setAccount','UA-48597539-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
