--- a/app/views/styles/contact.styl
+++ b/app/views/styles/contact.styl
@@ -13,7 +13,7 @@
     width 536px
     height 530px
 
-    input, textarea, button
+    input, textarea, button, .send
       position absolute
       background-color transparent
       border 0
@@ -25,7 +25,6 @@
     textarea:focus,
     button:focus
       outline none
-
 
     .name
       top 90px
@@ -42,12 +41,15 @@
       left 180px
       width 285px
       height 185px
-      line-height 1.4
       resize none
+      line-height 147%
+      background url('/images/Contact-Form-Underlines.png')
+      overflow hidden
 
     .send
       top 409px
       left 380px
+      cursor pointer
 
   h3
     margin-bottom 3px
